[gd_scene load_steps=2 format=3 uid="uid://cs3ae4lxurrtb"]

[ext_resource type="Script" path="res://face_ui/head_select.gd" id="1_16xdd"]

[node name="Node2D" type="Node2D"]
position = Vector2(-24, 0)
script = ExtResource("1_16xdd")

[node name="1" type="Button" parent="."]
offset_left = 990.0
offset_top = 210.0
offset_right = 1047.0
offset_bottom = 241.0
scale = Vector2(2.64131, 1.5)
text = "mouth1
"

[node name="2" type="Button" parent="."]
offset_left = 992.0
offset_top = 277.0
offset_right = 1049.0
offset_bottom = 308.0
scale = Vector2(2.64131, 1.5)
text = "mouth2
"

[node name="3" type="Button" parent="."]
offset_left = 990.0
offset_top = 352.0
offset_right = 1047.0
offset_bottom = 383.0
scale = Vector2(2.64131, 1.5)
text = "mouth3
"

[node name="4" type="Button" parent="."]
offset_left = 990.0
offset_top = 410.0
offset_right = 1059.0
offset_bottom = 441.0
scale = Vector2(2.64131, 1.5)
text = "mouth4
"

[node name="5" type="Button" parent="."]
offset_left = 989.0
offset_top = 465.0
offset_right = 1058.0
offset_bottom = 496.0
scale = Vector2(2.64131, 1.5)
text = "mouth5
"

[connection signal="pressed" from="1" to="." method="a_on__pressed"]
[connection signal="pressed" from="2" to="." method="b_on__pressed"]
[connection signal="pressed" from="3" to="." method="c_on__pressed"]
[connection signal="pressed" from="4" to="." method="d_on__pressed"]
[connection signal="pressed" from="5" to="." method="e_on__pressed"]
